# tattiebogle-dos

./: CMakeLists.txt  README.md  configure.sh
cmake/: wc-toolchain.cmake
src/: CMakeLists.txt  args.cpp  args.h  atapi.cpp  atapi.h  ini.cpp  ini.h  main.cpp
